# genetic_solver

./: .gitignore  CMakeLists.txt  Makefile
src/: main.cpp  mainwindow.cpp  mainwindow.hpp  untitled.ui
src/solver/: equation.hpp  genetic.cpp  genetic.hpp
